const { Shop, Item } = require('../src/gilded_rose');

const items = [
  new Item('+5 Dexterity Vest', 10, 20),
  new Item('Aged Brie', 2, 0),
  new Item('Elixir of the Mongoose', 5, 7),
  new Item('Sulfuras, Hand of Ragnaros', 0, 80),
  new Item('Sulfuras, Hand of Ragnaros', -1, 80),
  new Item('Backstage passes to a TAFKAL80ETC concert', 15, 20),
  new Item('Backstage passes to a TAFKAL80ETC concert', 10, 49),
  new Item('Backstage passes to a TAFKAL80ETC concert', 5, 49),
  new Item('Backstage passes to a TAFKAL80ETC concert', 10, 50),
  new Item('Backstage passes to a TAFKAL80ETC concert', 5, 50),
  // This Conjured item does not work properly yet
  new Item('Conjured Mana Cake', 3, 6),
];

describe('Gilded Rose', () => {
  const days = 15;
  const gildedRose = new Shop(items);
  for (let day = 0; day < days; day++) {
    it(`should return expected quality after ${day} day's`, () => {
      expect(gildedRose.updateQuality()).toMatchSnapshot();
    });
  }
});
git s